@@ -9,6 +9,7 @@ version 0.83:
 
 	Bug Fixes:
 	* Compile with gtk 2.5.x (Gary Kramlich)
+	* Escape invalid characters in log names (Daniel Atallah)
 
 version 0.82.1 (08/27/2004):
 	Bug Fixes:
